feat: Add optimized image loading with caching and WebP support
- Introduced OptimizedImageLoader for improved image loading performance.
- Added support for multiple image size variants (small, medium, large, original).
- Implemented LRU caching mechanism for memory and disk caches.
- Enhanced error handling and retry logic for image downloads.
- Deprecated the old ImageLoader in favor of the new optimized version.
- Updated UI styles for media cards and poster displays.
- Implemented navigation to library view and back button functionality in the main window.
- Added performance optimizations for scrolling and image rendering.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
-/target
+# Rust
+/target/
+**/*.rs.bk
 
+# Nix
 .direnv
+
+# Flatpak
+build-dir/
+.flatpak-builder/
+cargo-sources.json
+flatpak-cargo-generator.py
+*.flatpak
+repo/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Build artifacts
+*.gresource
+build/
+
+# Cache and config
+data/cache/
+data/config/
