feat: Add PlayerPage and ShowDetailsPage for media playback and show details
- Implemented PlayerPage with video playback controls using GStreamer.
- Added functionality to load media items and manage playback state.
- Created ShowDetailsPage to display show information, seasons, and episodes.
- Integrated GTK4 UI components for a responsive layout.
- Enhanced CSS styles for improved visual presentation of posters and UI elements.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ categories = ["multimedia", "gui"]
 [dependencies]
 # GTK and UI
 gtk4 = { version = "0.9", features = ["v4_12"] }
+gdk4 = { version = "0.9", features = ["v4_12"] }
 gdk-pixbuf = "0.20"
 libadwaita = { version = "0.7", features = ["v1_5"] }
 
