--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 once_cell = "1.21"
 chrono = { version = "0.4", features = ["serde"] }
 dirs = "6.0"
-keyring = { version = "3.6", features = ["linux-native"] }
+keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
 image = "0.25"
 webp = "0.3"
 base64 = "0.22"
