--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -123,8 +123,8 @@ jobs:
       - name: Build release binary
         run: |
           cargo build --release
-          strip target/release/plex-gtk
-          mv target/release/plex-gtk reel
+          strip target/release/reel
+          mv target/release/reel reel
       
       - name: Package Linux binary
         run: |
@@ -136,173 +136,176 @@ jobs:
           tag_name: ${{ needs.create-release.outputs.version }}
           files: reel-linux-x86_64.tar.gz
 
-  build-macos:
-    needs: create-release
-    runs-on: macos-latest
-    permissions:
-      contents: write
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Install dependencies
-        run: |
-          brew install gtk4 libadwaita gstreamer gst-plugins-base gst-plugins-good gst-plugins-bad gst-plugins-ugly gst-libav pkg-config blueprint-compiler create-dmg
-      
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
-      
-      - name: Cache cargo dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-release-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-cargo-release-
-      
-      - name: Build release binary
-        run: |
-          cargo build --release
-          strip target/release/plex-gtk
-      
-      - name: Create macOS app bundle
-        run: |
-          mkdir -p Reel.app/Contents/MacOS
-          mkdir -p Reel.app/Contents/Resources
-          cp target/release/plex-gtk Reel.app/Contents/MacOS/reel
-          
-          # Create Info.plist
-          cat > Reel.app/Contents/Info.plist << EOF
-          <?xml version="1.0" encoding="UTF-8"?>
-          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-          <plist version="1.0">
-          <dict>
-              <key>CFBundleExecutable</key>
-              <string>reel</string>
-              <key>CFBundleIdentifier</key>
-              <string>org.gnome.Reel</string>
-              <key>CFBundleName</key>
-              <string>Reel</string>
-              <key>CFBundleDisplayName</key>
-              <string>Reel Media Player</string>
-              <key>CFBundlePackageType</key>
-              <string>APPL</string>
-              <key>CFBundleShortVersionString</key>
-              <string>${{ needs.create-release.outputs.version }}</string>
-              <key>CFBundleVersion</key>
-              <string>1</string>
-              <key>LSMinimumSystemVersion</key>
-              <string>10.15</string>
-              <key>NSHighResolutionCapable</key>
-              <true/>
-              <key>NSSupportsAutomaticGraphicsSwitching</key>
-              <true/>
-          </dict>
-          </plist>
-          EOF
-      
-      - name: Create DMG
-        run: |
-          create-dmg \
-            --volname "Reel Media Player" \
-            --window-pos 200 120 \
-            --window-size 600 400 \
-            --icon-size 100 \
-            --icon "Reel.app" 175 190 \
-            --hide-extension "Reel.app" \
-            --app-drop-link 425 190 \
-            "reel-macos-universal.dmg" \
-            "Reel.app"
-      
-      - name: Upload macOS Release Asset
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ needs.create-release.outputs.version }}
-          files: reel-macos-universal.dmg
+  # macOS and Windows builds are disabled for now - we only test on Linux
+  # Uncomment the sections below to enable multi-platform builds
+  
+  # build-macos:
+  #   needs: create-release
+  #   runs-on: macos-latest
+  #   permissions:
+  #     contents: write
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     
+  #     - name: Install dependencies
+  #       run: |
+  #         brew install gtk4 libadwaita gstreamer gst-plugins-base gst-plugins-good gst-plugins-bad gst-plugins-ugly gst-libav pkg-config blueprint-compiler create-dmg
+  #     
+  #     - name: Setup Rust
+  #       uses: dtolnay/rust-toolchain@stable
+  #     
+  #     - name: Cache cargo dependencies
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: |
+  #           ~/.cargo/bin/
+  #           ~/.cargo/registry/index/
+  #           ~/.cargo/registry/cache/
+  #           ~/.cargo/git/db/
+  #           target/
+  #         key: ${{ runner.os }}-cargo-release-${{ hashFiles('**/Cargo.lock') }}
+  #         restore-keys: ${{ runner.os }}-cargo-release-
+  #     
+  #     - name: Build release binary
+  #       run: |
+  #         cargo build --release
+  #         strip target/release/reel
+  #     
+  #     - name: Create macOS app bundle
+  #       run: |
+  #         mkdir -p Reel.app/Contents/MacOS
+  #         mkdir -p Reel.app/Contents/Resources
+  #         cp target/release/reel Reel.app/Contents/MacOS/reel
+  #         
+  #         # Create Info.plist
+  #         cat > Reel.app/Contents/Info.plist << EOF
+  #         <?xml version="1.0" encoding="UTF-8"?>
+  #         <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+  #         <plist version="1.0">
+  #         <dict>
+  #             <key>CFBundleExecutable</key>
+  #             <string>reel</string>
+  #             <key>CFBundleIdentifier</key>
+  #             <string>org.gnome.Reel</string>
+  #             <key>CFBundleName</key>
+  #             <string>Reel</string>
+  #             <key>CFBundleDisplayName</key>
+  #             <string>Reel Media Player</string>
+  #             <key>CFBundlePackageType</key>
+  #             <string>APPL</string>
+  #             <key>CFBundleShortVersionString</key>
+  #             <string>${{ needs.create-release.outputs.version }}</string>
+  #             <key>CFBundleVersion</key>
+  #             <string>1</string>
+  #             <key>LSMinimumSystemVersion</key>
+  #             <string>10.15</string>
+  #             <key>NSHighResolutionCapable</key>
+  #             <true/>
+  #             <key>NSSupportsAutomaticGraphicsSwitching</key>
+  #             <true/>
+  #         </dict>
+  #         </plist>
+  #         EOF
+  #     
+  #     - name: Create DMG
+  #       run: |
+  #         create-dmg \
+  #           --volname "Reel Media Player" \
+  #           --window-pos 200 120 \
+  #           --window-size 600 400 \
+  #           --icon-size 100 \
+  #           --icon "Reel.app" 175 190 \
+  #           --hide-extension "Reel.app" \
+  #           --app-drop-link 425 190 \
+  #           "reel-macos-universal.dmg" \
+  #           "Reel.app"
+  #     
+  #     - name: Upload macOS Release Asset
+  #       uses: softprops/action-gh-release@v2
+  #       with:
+  #         tag_name: ${{ needs.create-release.outputs.version }}
+  #         files: reel-macos-universal.dmg
 
-  build-windows:
-    needs: create-release
-    runs-on: windows-latest
-    permissions:
-      contents: write
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: x86_64-pc-windows-gnu
-      
-      - uses: msys2/setup-msys2@v2
-        with:
-          msystem: MINGW64
-          update: true
-          install: >-
-            mingw-w64-x86_64-gtk4
-            mingw-w64-x86_64-libadwaita
-            mingw-w64-x86_64-gstreamer
-            mingw-w64-x86_64-gst-plugins-base
-            mingw-w64-x86_64-gst-plugins-good
-            mingw-w64-x86_64-gst-plugins-bad
-            mingw-w64-x86_64-gst-plugins-ugly
-            mingw-w64-x86_64-gst-libav
-            mingw-w64-x86_64-pkg-config
-            mingw-w64-x86_64-gcc
-            mingw-w64-x86_64-blueprint-compiler
-            base-devel
-            zip
-      
-      - name: Cache cargo dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-release-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-cargo-release-
-      
-      - name: Build release binary
-        shell: msys2 {0}
-        run: |
-          export PATH="/c/Users/runneradmin/.cargo/bin:$PATH"
-          export PKG_CONFIG_PATH="/mingw64/lib/pkgconfig:$PKG_CONFIG_PATH"
-          cargo build --release
-          strip target/release/plex-gtk.exe
-      
-      - name: Package Windows executable
-        shell: msys2 {0}
-        run: |
-          mkdir -p dist/Reel
-          cp target/release/plex-gtk.exe dist/Reel/reel.exe
-          
-          # Copy required DLLs
-          ldd target/release/plex-gtk.exe | grep mingw64 | awk '{print $3}' | xargs -I {} cp {} dist/Reel/
-          
-          # Create README
-          cat > dist/Reel/README.txt << EOF
-          Reel Media Player for Windows
-          ==============================
-          
-          To run Reel, simply double-click reel.exe
-          
-          If you encounter any issues with missing DLLs, please ensure you have:
-          - Visual C++ Redistributables installed
-          - GTK4 runtime (included in this package)
-          
-          For support, visit: https://github.com/yourusername/plex-gtk
-          EOF
-          
-          # Create zip archive
-          cd dist && zip -r ../reel-windows-x86_64.zip Reel && cd ..
-      
-      - name: Upload Windows Release Asset
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ needs.create-release.outputs.version }}
-          files: reel-windows-x86_64.zip
+  # build-windows:
+  #   needs: create-release
+  #   runs-on: windows-latest
+  #   permissions:
+  #     contents: write
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     
+  #     - name: Setup Rust
+  #       uses: dtolnay/rust-toolchain@stable
+  #       with:
+  #         targets: x86_64-pc-windows-gnu
+  #     
+  #     - uses: msys2/setup-msys2@v2
+  #       with:
+  #         msystem: MINGW64
+  #         update: true
+  #         install: >-
+  #           mingw-w64-x86_64-gtk4
+  #           mingw-w64-x86_64-libadwaita
+  #           mingw-w64-x86_64-gstreamer
+  #           mingw-w64-x86_64-gst-plugins-base
+  #           mingw-w64-x86_64-gst-plugins-good
+  #           mingw-w64-x86_64-gst-plugins-bad
+  #           mingw-w64-x86_64-gst-plugins-ugly
+  #           mingw-w64-x86_64-gst-libav
+  #           mingw-w64-x86_64-pkg-config
+  #           mingw-w64-x86_64-gcc
+  #           mingw-w64-x86_64-blueprint-compiler
+  #           base-devel
+  #           zip
+  #     
+  #     - name: Cache cargo dependencies
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: |
+  #           ~/.cargo/bin/
+  #           ~/.cargo/registry/index/
+  #           ~/.cargo/registry/cache/
+  #           ~/.cargo/git/db/
+  #           target/
+  #         key: ${{ runner.os }}-cargo-release-${{ hashFiles('**/Cargo.lock') }}
+  #         restore-keys: ${{ runner.os }}-cargo-release-
+  #     
+  #     - name: Build release binary
+  #       shell: msys2 {0}
+  #       run: |
+  #         export PATH="/c/Users/runneradmin/.cargo/bin:$PATH"
+  #         export PKG_CONFIG_PATH="/mingw64/lib/pkgconfig:$PKG_CONFIG_PATH"
+  #         cargo build --release
+  #         strip target/release/reel.exe
+  #     
+  #     - name: Package Windows executable
+  #       shell: msys2 {0}
+  #       run: |
+  #         mkdir -p dist/Reel
+  #         cp target/release/reel.exe dist/Reel/reel.exe
+  #         
+  #         # Copy required DLLs
+  #         ldd target/release/reel.exe | grep mingw64 | awk '{print $3}' | xargs -I {} cp {} dist/Reel/
+  #         
+  #         # Create README
+  #         cat > dist/Reel/README.txt << EOF
+  #         Reel Media Player for Windows
+  #         ==============================
+  #         
+  #         To run Reel, simply double-click reel.exe
+  #         
+  #         If you encounter any issues with missing DLLs, please ensure you have:
+  #         - Visual C++ Redistributables installed
+  #         - GTK4 runtime (included in this package)
+  #         
+  #         For support, visit: https://github.com/yourusername/reel
+  #         EOF
+  #         
+  #         # Create zip archive
+  #         cd dist && zip -r ../reel-windows-x86_64.zip Reel && cd ..
+  #     
+  #     - name: Upload Windows Release Asset
+  #       uses: softprops/action-gh-release@v2
+  #       with:
+  #         tag_name: ${{ needs.create-release.outputs.version }}
+  #         files: reel-windows-x86_64.zip
