--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ gstreamer = "0.24"
 gstreamer-video = "0.24"
 gstreamer-player = "0.24"
 gstreamer-pbutils = "0.24"
+libmpv2 = "5.0"
+libmpv2-sys = "4.0"
 
 # Async runtime
 tokio = { version = "1.47", features = ["full"] }
@@ -52,6 +54,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 once_cell = "1.21"
 chrono = { version = "0.4", features = ["serde"] }
 dirs = "6.0"
+libc = "0.2"
 keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
 image = "0.25"
 webp = "0.3"
