feat: Add multi-platform packaging support (deb, rpm, AppImage)
- Configure cargo-deb for Debian package generation
- Configure cargo-generate-rpm for RPM package generation
- Add AppImage build configuration and scripts
- Update GitHub Actions workflow to build all package formats on release
- Add package build commands to nix flake (build-deb, build-rpm, build-appimage)
- Include proper package metadata and dependencies for each format

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,13 +49,37 @@ jobs:
             - 
             
             ## Downloads
-            - **Linux**: `reel-linux-x86_64.tar.gz` - Extract and run `./reel`
+            - **Linux Tarball**: `reel-linux-x86_64.tar.gz` - Extract and run `./reel`
+            - **Debian/Ubuntu**: `reel-*-amd64.deb` - Install with `sudo dpkg -i reel-*.deb`
+            - **Fedora/RHEL**: `reel-*-x86_64.rpm` - Install with `sudo rpm -i reel-*.rpm`
+            - **AppImage**: `reel-*-x86_64.AppImage` - Portable, runs on most Linux distributions
             - **macOS**: `reel-macos-universal.dmg` - Mount and drag to Applications
             - **Windows**: `reel-windows-x86_64.zip` - Extract and run `reel.exe`
             
             ## Installation
             
             ### Linux
+            
+            #### AppImage (Recommended - Universal)
+            ```bash
+            chmod +x reel-*-x86_64.AppImage
+            ./reel-*-x86_64.AppImage
+            ```
+            
+            #### Debian/Ubuntu
+            ```bash
+            sudo dpkg -i reel-*-amd64.deb
+            sudo apt-get install -f  # Install dependencies if needed
+            ```
+            
+            #### Fedora/RHEL/openSUSE
+            ```bash
+            sudo rpm -i reel-*-x86_64.rpm
+            # or
+            sudo dnf install ./reel-*-x86_64.rpm
+            ```
+            
+            #### Manual Installation
             ```bash
             tar -xzf reel-linux-x86_64.tar.gz
             chmod +x reel
@@ -99,11 +123,14 @@ jobs:
             gstreamer1.0-plugins-bad \
             gstreamer1.0-plugins-ugly \
             gstreamer1.0-libav \
+            libmpv-dev \
             libsqlite3-dev \
             pkg-config \
             libssl-dev \
             libdbus-1-dev \
-            blueprint-compiler
+            blueprint-compiler \
+            rpm \
+            file
       
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
@@ -120,21 +147,67 @@ jobs:
           key: ${{ runner.os }}-cargo-release-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: ${{ runner.os }}-cargo-release-
       
+      - name: Install cargo packaging tools
+        run: |
+          cargo install cargo-deb --locked || true
+          cargo install cargo-generate-rpm --locked || true
+      
       - name: Build release binary
         run: |
           cargo build --release
           strip target/release/reel
-          mv target/release/reel reel
       
-      - name: Package Linux binary
+      - name: Package as tarball
         run: |
+          cp target/release/reel reel
           tar -czf reel-linux-x86_64.tar.gz reel
       
-      - name: Upload Linux Release Asset
+      - name: Build Debian package
+        run: |
+          cargo deb --no-build
+          mv target/debian/*.deb reel-${{ needs.create-release.outputs.version }}-amd64.deb || true
+      
+      - name: Build RPM package
+        run: |
+          cargo generate-rpm
+          mv target/generate-rpm/*.rpm reel-${{ needs.create-release.outputs.version }}-x86_64.rpm || true
+      
+      - name: Setup AppImage tools
+        run: |
+          wget -q https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
+          chmod +x linuxdeploy-x86_64.AppImage
+          wget -q https://raw.githubusercontent.com/linuxdeploy/linuxdeploy-plugin-gtk/master/linuxdeploy-plugin-gtk.sh
+          chmod +x linuxdeploy-plugin-gtk.sh
+      
+      - name: Build AppImage
+        run: |
+          mkdir -p AppDir/usr/bin
+          mkdir -p AppDir/usr/share/applications
+          mkdir -p AppDir/usr/share/icons/hicolor/scalable/apps
+          cp target/release/reel AppDir/usr/bin/
+          cp data/dev.arsfeld.Reel.desktop AppDir/usr/share/applications/
+          cp data/icons/hicolor/scalable/apps/dev.arsfeld.Reel.svg AppDir/usr/share/icons/hicolor/scalable/apps/
+          
+          export VERSION=${{ needs.create-release.outputs.version }}
+          ./linuxdeploy-x86_64.AppImage \
+            --appdir AppDir \
+            --plugin gtk \
+            --output appimage \
+            --desktop-file AppDir/usr/share/applications/dev.arsfeld.Reel.desktop \
+            --icon-file AppDir/usr/share/icons/hicolor/scalable/apps/dev.arsfeld.Reel.svg \
+            --executable AppDir/usr/bin/reel || true
+          
+          mv Reel*.AppImage reel-${{ needs.create-release.outputs.version }}-x86_64.AppImage || true
+      
+      - name: Upload Linux Release Assets
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ needs.create-release.outputs.version }}
-          files: reel-linux-x86_64.tar.gz
+          files: |
+            reel-linux-x86_64.tar.gz
+            reel-*.deb
+            reel-*.rpm
+            reel-*.AppImage
 
   # macOS and Windows builds are disabled for now - we only test on Linux
   # Uncomment the sections below to enable multi-platform builds
