--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,6 +87,70 @@ jobs:
           echo "EOF" >> $GITHUB_OUTPUT
         continue-on-error: true
       
+      - name: Build release body
+        id: build_body
+        if: steps.check_release.outputs.exists == 'false'
+        run: |
+          cat > release_body.md << 'RELEASE_BODY'
+          # Reel ${{ steps.get_version.outputs.version }}
+          
+          ## What's New
+          ${{ steps.generate_notes.outputs.notes || '- ' }}
+          
+          ## Downloads
+          - **Linux Tarball**: `reel-linux-x86_64.tar.gz` - Extract and run `./reel`
+          - **Debian/Ubuntu**: `reel-*-amd64.deb` - Install with `sudo dpkg -i reel-*.deb`
+          - **Fedora/RHEL**: `reel-*-x86_64.rpm` - Install with `sudo rpm -i reel-*.rpm`
+          - **AppImage**: `reel-*-x86_64.AppImage` - Portable, runs on most Linux distributions
+          - **macOS**: `reel-macos-universal.dmg` - Mount and drag to Applications
+          - **Windows**: `reel-windows-x86_64.zip` - Extract and run `reel.exe`
+          
+          ## Installation
+          
+          ### Linux
+          
+          #### AppImage (Recommended - Universal)
+          ```bash
+          chmod +x reel-*-x86_64.AppImage
+          ./reel-*-x86_64.AppImage
+          ```
+          
+          #### Debian/Ubuntu
+          ```bash
+          sudo dpkg -i reel-*-amd64.deb
+          sudo apt-get install -f  # Install dependencies if needed
+          ```
+          
+          #### Fedora/RHEL/openSUSE
+          ```bash
+          sudo rpm -i reel-*-x86_64.rpm
+          # or
+          sudo dnf install ./reel-*-x86_64.rpm
+          ```
+          
+          #### Manual Installation
+          ```bash
+          tar -xzf reel-linux-x86_64.tar.gz
+          chmod +x reel
+          ./reel
+          ```
+          
+          ### macOS
+          1. Download the DMG file
+          2. Double-click to mount
+          3. Drag Reel to Applications folder
+          
+          ### Windows
+          1. Download the ZIP file
+          2. Extract to desired location
+          3. Run `reel.exe`
+          
+          ## System Requirements
+          - GTK4 and libadwaita
+          - GStreamer with common plugins
+          - 64-bit operating system
+          RELEASE_BODY
+      
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v2
@@ -95,64 +159,7 @@ jobs:
           name: Reel ${{ steps.get_version.outputs.version }}
           draft: true
           prerelease: false
-          # Only set body if release doesn't exist
-          body: ${{ steps.check_release.outputs.exists == 'false' && format('# Reel {0}
-
-## What''s New
-{1}
-
-## Downloads
-- **Linux Tarball**: `reel-linux-x86_64.tar.gz` - Extract and run `./reel`
-- **Debian/Ubuntu**: `reel-*-amd64.deb` - Install with `sudo dpkg -i reel-*.deb`
-- **Fedora/RHEL**: `reel-*-x86_64.rpm` - Install with `sudo rpm -i reel-*.rpm`
-- **AppImage**: `reel-*-x86_64.AppImage` - Portable, runs on most Linux distributions
-- **macOS**: `reel-macos-universal.dmg` - Mount and drag to Applications
-- **Windows**: `reel-windows-x86_64.zip` - Extract and run `reel.exe`
-
-## Installation
-
-### Linux
-
-#### AppImage (Recommended - Universal)
-```bash
-chmod +x reel-*-x86_64.AppImage
-./reel-*-x86_64.AppImage
-```
-
-#### Debian/Ubuntu
-```bash
-sudo dpkg -i reel-*-amd64.deb
-sudo apt-get install -f  # Install dependencies if needed
-```
-
-#### Fedora/RHEL/openSUSE
-```bash
-sudo rpm -i reel-*-x86_64.rpm
-# or
-sudo dnf install ./reel-*-x86_64.rpm
-```
-
-#### Manual Installation
-```bash
-tar -xzf reel-linux-x86_64.tar.gz
-chmod +x reel
-./reel
-```
-
-### macOS
-1. Download the DMG file
-2. Double-click to mount
-3. Drag Reel to Applications folder
-
-### Windows
-1. Download the ZIP file
-2. Extract to desired location
-3. Run `reel.exe`
-
-## System Requirements
-- GTK4 and libadwaita
-- GStreamer with common plugins
-- 64-bit operating system', steps.get_version.outputs.version, steps.generate_notes.outputs.notes || '- ') || '' }}
+          body_path: ${{ steps.check_release.outputs.exists == 'false' && 'release_body.md' || '' }}
 
   build-linux:
     needs: create-release
