feat: Optimize sync service and image loading performance
- Implement background poster download with cancellation support
- Add batch image loading with concurrent processing
- Optimize image cache with simplified stats tracking
- Add configurable MPV cache settings (size, duration, backbuffer)
- Implement predictive image preloading based on scroll patterns
- Add sync cancellation token for improved control flow
- Document Jellyfin backend implementation roadmap
- Update project tasks with completed features and upcoming work

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ libmpv2-sys = "4.0"
 
 # Async runtime
 tokio = { version = "1.47", features = ["full"] }
+tokio-util = { version = "0.7", features = ["rt"] }
 async-trait = "0.1"
 futures = "0.3"
 
